fix(sidepanel toolbar): tooltip alignment fixed

--- a/packages/cloud-cognitive/src/components/SidePanel/_side-panel.scss
+++ b/packages/cloud-cognitive/src/components/SidePanel/_side-panel.scss
@@ -298,7 +298,7 @@ $action-set-block-class: #{$pkg-prefix}--action-set;
       margin-bottom: $spacing-05;
     }
     .#{$block-class}__action-toolbar {
-      position: fixed;
+      position: sticky;
       z-index: 4;
       /* stylelint-disable-next-line carbon/layout-token-use */
       top: var(--#{$block-class}--title-height);
